--- a/ForecastFinder/static/css/style.css
+++ b/ForecastFinder/static/css/style.css
@@ -33,27 +33,27 @@ h5 {
   padding: 0;
 }
 
-form{
+form {
   position: fixed;
   top: 50%;
   left: 50%;
   top: 20%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   transition: all 1s;
   width: 50px;
   height: 50px;
-  background: white;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
   box-sizing: border-box;
   border-radius: 25px;
   border: 4px solid white;
   padding: 5px;
 }
 
-input{
+input {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;;
+  width: 100%;
   height: 42.5px;
   line-height: 30px;
   outline: 0;
@@ -64,7 +64,7 @@ input{
   padding: 0 20px;
 }
 
-.fa{
+.fa {
   box-sizing: border-box;
   padding: 10px;
   width: 42.5px;
@@ -79,16 +79,16 @@ input{
   transition: all 1s;
 }
 
-form:hover{
+form:hover {
   width: 300px;
   cursor: pointer;
 }
 
-form:hover input{
+form:hover input {
   display: block;
 }
 
-form:hover .fa{
+form:hover .fa {
   background: #07051a;
   color: white;
 }
@@ -285,4 +285,70 @@ h5 {
   .date {
     width: 40%;
   }
+}
+
+.icons ul {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  top: 500px;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  margin-top: 100px;
+  display: flex;
+}
+
+.icons ul li {
+  list-style: none;
+
+}
+
+.icons ul li a {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  display: block;
+  text-align: center;
+  margin: 0 10px;
+
+  border-radius: 50%;
+  padding: 6px;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+  box-sizing: border-box;
+  text-decoration: none;
+  transition: .5s;
+}
+
+ul li a:hover {
+  text-decoration: none;
+
+}
+
+ul li a .fab {
+  width: 100%;
+  height: 100%;
+  display: block;
+
+  border-radius: 50%;
+  line-height: calc(60px - 12px);
+  font-size: 24px;
+  color: black;
+  transition: .5s;
+}
+
+ul li:nth-child(1) a:hover .fab {
+  color: #3b5998;
+
+}
+
+ul li:nth-child(2) a:hover .fab {
+  color: rgb(199, 199, 199);
+}
+
+ul li:nth-child(3) a:hover .fab {
+  color: #cd486b;
+}
+
+ul li:nth-child(4) a:hover .fab {
+  color: #007bb6;
 }
