--- a/ForecastFinder/templates/index.html
+++ b/ForecastFinder/templates/index.html
@@ -8,14 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>ForecastFinder.io</title>
 </head>
 
 <body>
     <main>
-        <form action="">
-            <input type="search" placeholder="Search here ...">
+        <form action="" method="post">
+            {% csrf_token %}
+            <input type="search" name="city" placeholder="Enter your city ...">
             <i class="fa fa-search"></i>
         </form>
         <!-- <section class="glass"> -->
@@ -24,7 +28,7 @@
             <div class="weatherData">
                 <h1 class="temperature">25&deg;</h1>
                 <h2 class="description">Partly Cloudy</h2>
-                <h3 class="city">Tirana, Albania</h3>
+                <h3 class="city">{{ city }}, Albania</h3>
             </div>
             <div class="date">
                 <h4 class="month" id="month"></h4>
@@ -32,6 +36,14 @@
             </div>
         </article>
         <!-- </section> -->
+        <div class="icons" data-aos="zoom-in-up" data-aos-duration="500" >
+            <ul>
+              <li><a href="https://www.linkedin.com/in/raghavendrasurya/" target="_blank" ><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/scoder5" target="_blank" ><i class="fab fa-github" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.instagram.com/raghavendrasuryat.r/" target="_blank" ><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.youtube.com/@SuryaRaghavendra" target="_blank" ><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
     </main>
 
     <script src="{% static 'js/index.js' %}"></script>
